--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -292,8 +292,35 @@
     <Content Include="Content\themes\dark-hive\jquery-ui.min.css" />
     <Content Include="Content\themes\dark-hive\theme.css" />
     <Content Include="Content\tools.css" />
-    <Content Include="favicon.ico" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fav\android-chrome-144x144.png" />
+    <Content Include="fav\android-chrome-192x192.png" />
+    <Content Include="fav\android-chrome-36x36.png" />
+    <Content Include="fav\android-chrome-48x48.png" />
+    <Content Include="fav\android-chrome-72x72.png" />
+    <Content Include="fav\android-chrome-96x96.png" />
+    <Content Include="fav\apple-touch-icon-114x114.png" />
+    <Content Include="fav\apple-touch-icon-120x120.png" />
+    <Content Include="fav\apple-touch-icon-144x144.png" />
+    <Content Include="fav\apple-touch-icon-152x152.png" />
+    <Content Include="fav\apple-touch-icon-180x180.png" />
+    <Content Include="fav\apple-touch-icon-57x57.png" />
+    <Content Include="fav\apple-touch-icon-60x60.png" />
+    <Content Include="fav\apple-touch-icon-72x72.png" />
+    <Content Include="fav\apple-touch-icon-76x76.png" />
+    <Content Include="fav\apple-touch-icon-precomposed.png" />
+    <Content Include="fav\apple-touch-icon.png" />
+    <Content Include="fav\browserconfig.xml" />
+    <Content Include="fav\favicon-16x16.png" />
+    <Content Include="fav\favicon-32x32.png" />
+    <Content Include="fav\favicon-96x96.png" />
+    <Content Include="fav\favicon.ico" />
+    <Content Include="fav\mstile-144x144.png" />
+    <Content Include="fav\mstile-150x150.png" />
+    <Content Include="fav\mstile-310x150.png" />
+    <Content Include="fav\mstile-310x310.png" />
+    <Content Include="fav\mstile-70x70.png" />
+    <Content Include="fav\safari-pinned-tab.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -339,6 +366,7 @@
     <Content Include="Areas\Admin\Views\Shared\_EditSizings.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Details.cshtml" />
+    <Content Include="fav\manifest.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
