JS setPager function renamed as getPagedData. Added refreshData function for submit or call  $.getJSON

--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -368,6 +368,7 @@
     <Content Include="libs\ag-grid\ag-grid.js" />
     <Content Include="libs\ag-grid\ag-grid.min.css" />
     <Content Include="libs\ag-grid\ag-grid.min.js" />
+    <Content Include="libs\ag-grid\ag-light-blue.css" />
     <Content Include="libs\ag-grid\theme-blue.css" />
     <Content Include="libs\ag-grid\theme-blue.min.css" />
     <Content Include="libs\ag-grid\theme-dark.css" />
